--- a/JobPortal/style.css
+++ b/JobPortal/style.css
@@ -35,7 +35,7 @@ header {
 }
 
 .content {
-    margin-left: 220px; /* Sidebar width + some spacing */
+    margin-left: 220px; 
     padding: 20px;
 }
 
